--- a/src/assets/scss/variables/_variables.scss
+++ b/src/assets/scss/variables/_variables.scss
@@ -1,3 +1,11 @@
 //  ================================================================================================
 //  ? TIP:  It is recommended to use this file for overriding bootstrap variables.
 //  ================================================================================================
+$font-family-sans-serif: 'Noto Sans', Helvetica, Arial, serif !default;
+$font-family-monospace: 'Noto Sans', Helvetica, Arial, serif !default;
+
+$primary: #0a66c2;
+$secondary: #0a66c2;
+$link-color: #302f4b;
+$hover-color: #4da6f9
+
