--- a/src/assets/scss/variables/_variables.scss
+++ b/src/assets/scss/variables/_variables.scss
@@ -4,8 +4,8 @@
 $font-family-sans-serif: 'Noto Sans', Helvetica, Arial, serif !default;
 $font-family-monospace: 'Noto Sans', Helvetica, Arial, serif !default;
 
-$primary: #0a66c2;
-$secondary: #0a66c2;
+$primary: #433cd8;
+$secondary: #433cd8;
 $link-color: #302f4b;
 $hover-color: #4da6f9
 
