--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -12,13 +12,39 @@ WE WILL RELEASE FUTURE UPDATES SO IN ORDER TO NOT OVERWRITE YOUR STYLES IT'S BET
 
 //for keep actions dropdown visibe in workspaces list 
 
+// Variables
+
+$theme_color1 : #433cd8;
+$theme_color2 : #4eb5ef;
+$theme_color3 : #433cd8;
+
+@mixin flex-center {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
 html
 body{
 	background-color: #f3f2ef;
 }
 
+.theme_color1{
+	color: $theme_color1;
+}
+
+.theme_color2{
+	color: $theme_color2;
+}
+
 .workspace-list .rdt_TableBody {
 	min-height: 250px;
+}
+
+.btn-outline-primary:not(:disabled):not(.disabled):active,
+.btn-outline-primary:not(:disabled):not(.disabled).active,
+.btn-outline-primary:not(:disabled):not(.disabled):focus{
+	background-color: transparent !important;
 }
 
 .nav-pills .nav-link,
@@ -42,6 +68,9 @@ a:not([href]):hover{
 	color: #4da6f9;
 }
 
+.dropdown-menu .dropdown-item {
+	width: 100%;
+}
 
 .main-menu .navbar-header .navbar-brand .brand-text{
 	color:#302f4b;
@@ -52,15 +81,65 @@ a:not([href]):hover{
 	border-radius: 50px;
 }
 
-
 span.divider{
 	border: 1px solid #eeeeee;
 }
 
 .bs-popover-auto{
 	border-radius: 15px !important;
+	margin-top: 10px;
+	margin-left: 10px;
+}
+
+.popover .popover-arrow{
+	top: -10px !important;
 }
 
 .bs-popover-auto .popover-header{
 	border-radius: 15px 15px 0 0;
+}
+
+.main-menu .workspace-outer{
+	position: relative;
+	padding: 10px 15px 15px;
+}
+
+.main-menu .navbar-header .navbar-brand{
+	margin-top: 1rem;
+}
+
+.vertical-layout .modern-nav-toggle {
+	@include flex-center;
+	display: flex !important;
+	position: relative;
+	top:-5px;
+	height: 22px;
+	width: 22px;
+	border: 1px solid;
+	color: #ffffff;
+	background-color: $theme_color1;
+	border-color: $theme_color1;
+	border-radius: 50%;
+	font-size: 12px;
+}
+
+.vertical-layout .modern-nav-toggle svg{
+	margin: 0 !important;
+}
+
+.vertical-layout.menu-collapsed .modern-nav-toggle {
+	background-color: #ffffff;
+	color: $theme_color1;
+}
+
+.vertical-layout.menu-collapsed #controlledPopover{
+	@include flex-center;
+}
+
+.vertical-layout.menu-collapsed #controlledPopover .avatar {
+	margin-left: 14px;
+}
+
+.vertical-layout .expanded #controlledPopover .avatar {
+	margin-left: 0;
 }
