--- a/src/@core/scss/base/bootstrap-extended/_navbar.scss
+++ b/src/@core/scss/base/bootstrap-extended/_navbar.scss
@@ -396,13 +396,13 @@
     padding: 0.8rem 1rem;
   }
   .header-navbar-shadow {
-    display: block;
-    background: linear-gradient(
-      180deg,
-      hsla(0, 0%, 97.3%, 0.95) 44%,
-      hsla(0, 0%, 97.3%, 0.46) 73%,
-      hsla(0, 0%, 100%, 0)
-    );
+    // display: block;
+    // background: linear-gradient(
+    //   180deg,
+    //   hsla(0, 0%, 97.3%, 0.95) 44%,
+    //   hsla(0, 0%, 97.3%, 0.46) 73%,
+    //   hsla(0, 0%, 100%, 0)
+    // );
     padding-top: 2.2rem;
     background-repeat: repeat;
     width: 100%;
