--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -143,3 +143,12 @@ span.divider{
 .vertical-layout .expanded #controlledPopover .avatar {
 	margin-left: 0;
 }
+
+.top-alert {
+	padding: 1rem 2rem 0;
+    margin-left: 260px;
+}
+
+.cursor-pointer {
+	cursor: pointer;
+}
