--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -41,6 +41,14 @@ body{
 	min-height: 250px;
 }
 
+.companies-list{
+	.TUEFO {
+		background-color: transparent;
+	}
+	.rdt_TableBody{
+		min-height: 250px;
+	}
+}
 .btn-outline-primary:not(:disabled):not(.disabled):active,
 .btn-outline-primary:not(:disabled):not(.disabled).active,
 .btn-outline-primary:not(:disabled):not(.disabled):focus{
