--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -160,3 +160,16 @@ span.divider{
 .cursor-pointer {
 	cursor: pointer;
 }
+
+.phone-placeholder input {
+	border: none !important;
+}
+
+.phone-placeholder .flag .arrow {
+	display: none !important;
+}
+
+.phone-placeholder .flag-dropdown {
+	border: none !important;
+	background: none !important;
+}
