update style for phone placeholder

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -163,6 +163,7 @@ span.divider{
 
 .phone-placeholder input {
 	border: none !important;
+	cursor: auto !important;
 }
 
 .phone-placeholder .flag .arrow {
