--- a/src/@core/scss/react/apps/app-users.scss
+++ b/src/@core/scss/react/apps/app-users.scss
@@ -17,3 +17,10 @@
     }
   }
 }
+.app-leadlist-list {
+  @media (max-width: 647px) {
+    .table-header-actions {
+      margin-top: 1rem;
+    }
+  }
+}
