--- a/src/@core/scss/react/libs/tables/react-dataTable-component.scss
+++ b/src/@core/scss/react/libs/tables/react-dataTable-component.scss
@@ -39,7 +39,7 @@
     .rdt_TableRow {
       color: $body-color;
       .rdt_TableCell {
-        min-height: 53px;
+        height: 53px;
         padding: 0.72rem 1.5rem;
 
         .column-action {
