--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -41,6 +41,14 @@ body{
 	min-height: 250px;
 }
 
+.companies-list{
+	.TUEFO {
+		background-color: transparent;
+	}
+	.rdt_TableBody{
+		min-height: 250px;
+	}
+}
 .btn-outline-primary:not(:disabled):not(.disabled):active,
 .btn-outline-primary:not(:disabled):not(.disabled).active,
 .btn-outline-primary:not(:disabled):not(.disabled):focus{
@@ -151,4 +159,18 @@ span.divider{
 
 .cursor-pointer {
 	cursor: pointer;
+}
+
+.phone-placeholder input {
+	border: none !important;
+	cursor: auto !important;
+}
+
+.phone-placeholder .flag .arrow {
+	display: none !important;
+}
+
+.phone-placeholder .flag-dropdown {
+	border: none !important;
+	background: none !important;
 }
