--- a/src/@core/scss/react/reactstrap/_badge.scss
+++ b/src/@core/scss/react/reactstrap/_badge.scss
@@ -2,10 +2,10 @@ a.badge:hover {
   color: $white;
 }
 .bg-success{
-  color: #28c76f!important;
-  background-color: rgba(40,199,111,.12)!important;
+  color: #fff!important;
+  background-color: #00FF40!important;
 }
 .bg-danger{
-  color: #ff9f43!important;
-  background-color: rgba(255,159,67,.12)!important;
+  color: #fff!important;
+  background-color: rgb(255, 6, 6) !important;
 }
