frontend bugs fixed

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -185,5 +185,5 @@ span.divider{
 
 #controlledPopover {
 	padding: 3px !important;
-	padding-left: 10px !important ;
+	// padding-left: 10px !important ;
 }
