--- a/src/@core/scss/react/libs/tables/react-dataTable-component.scss
+++ b/src/@core/scss/react/libs/tables/react-dataTable-component.scss
@@ -1,5 +1,5 @@
-@import '../../../base/bootstrap-extended/include';
-@import '../../../base/components/include';
+@import "../../../base/bootstrap-extended/include";
+@import "../../../base/components/include";
 
 .react-dataTable {
   border-radius: 0;
@@ -18,6 +18,7 @@
           font-weight: bold;
           font-style: 0.857rem;
           letter-spacing: 0.5px;
+
           text-transform: uppercase;
           &:hover {
             opacity: 1;
@@ -116,7 +117,7 @@
 
 .dataTable-select {
   width: 5rem;
-  &:not([multiple='multiple']) {
+  &:not([multiple="multiple"]) {
     margin-left: 0.25rem;
     margin-right: 0.25rem;
     background-position: calc(100% - 12px) 10px, calc(100% - 20px) 12px, 100% 0;
@@ -155,7 +156,7 @@
         border-color: $theme-dark-border-color;
         .rdt_TableCol {
           color: $theme-dark-body-color;
-          div[role='button'] {
+          div[role="button"] {
             color: $theme-dark-body-color;
           }
         }
